@@ -5,9 +5,15 @@
 #:folding=explicit:collapseFolds=1:
 
 TreeView.Options.Title=Tree View
+
 TreeView.Options.Show.Comments=Show comment nodes
 TreeView.Options.Continuous.Layout=Continuous layout for split-panes
 TreeView.Options.Show.Attributes=Show element attributes in tree:
+Show.Attributes.None=None
+Show.Attributes.ID.Only=ID only
+Show.Attributes.All=All
+
+
 treeview.rename.node.label=Rename Node
 treeview.remove.node.label=Remove Node
 treeview.add.attribute.label=Add Attribute
@@ -15,8 +21,8 @@ treeview.remove.attribute.label=Remove Attribute
 treeview.edit.node.label=Edit Node
 TreeView.EditDocType.Title=Edit Document Type Definition
 Edit.Node.Dialog.Title=Edit Node
-treeview.add.doctype.node.label=Add Document Type Definition
 
+treeview.add.doctype.node.label=Add Document Type Definition
 treeview.add.element.node.label=Add Element Node
 treeview.add.text.node.label=Add Text Node
 treeview.add.cdata.node.label=Add CDATA Node
